<resources>
    <string name="app_name">PhoneApp</string>
    <string name="hello_msg">Hello to the main page</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="login">Login</string>
    <string name="challenges">Challenges</string>
    <string name="header">Header</string>
    <string name="navigation">Navigation</string>
    <string name="dashboard">Dashboard</string>
    <string name="stats">Stats</string>
    <string name="friends">Friends</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="about">About</string>
    <string name="profile_name">Profile Name</string>
    <string name="profile_email">Profile email</string>
    <string name="theme_switch">Switch theme</string>
    <string name="dashboard_title">Dashboard</string>
    <string name="recent_activity_summary_description">Recent activity summary</string>
    <string name="menu_icon_for_drawer">menu icon for drawer</string>
    <string name="navigation_drawer_open">open drawer</string>
    <string name="navigation_drawer_close">close drawer</string>
    <string name="profile_name_picture">Profile</string>
    <string name="arch">arch</string>
    <string name="profile_picture">profile</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="height">Height\n</string>
    <string name="weight">Weight</string>
    <string name="age">Age</string>
    <string name="gender">Gender\n</string>
    <string name="personal_data">Personal Data</string>
    <string name="phone_number">Phone Number</string>
    <string name="edit">Edit\n</string>
    <string name="personal_data2">Personal Data</string>
    <string name="general_info">General info</string>
    <string name="bpm_default_value">BPM</string>
    <string name="measure_bpm">MEASURE BPM</string>
    <string name="bpm_instructions">TODO: add graph?</string>
    <string name="stress_level_title">Stress Level</string>
    <string name="pulse_title">Beats per minute</string>
    <string name="stress_level_default">Stress level</string>
    <string name="stress_description_hint">TODO: Add details by yourself</string>
    <string name="submit_button">Measure Stress</string>
    <string name="average_bpm_graph">Average BPM Graph</string>
    <string name="high_bpm_graph">High BPM Graph</string>
    <string name="low_bpm_graph">Low BPM Graph</string>
    <string name="average_beats_per_minute">Average Beats Per Minute :</string>
    <string name="highest_beats_per_minute">Highest Beats Per Minute :</string>
    <string name="lowest_beats_per_minute">Lowest Beats Per Minute :</string>
    <string name="select_time_range">Select Time Range</string>
    <string name="actual_stress_level">Stress level</string>
    <string name="select_actual_stress_level">Select Actual stress level</string>
    <string name="discard">Discard</string>
    <string name="save">Save</string>
    <string name="select_stress_level">Select Stress Level</string>
    <string name="confirm">Confirm</string>
    <string name="select_time_interval">Select Time Interval</string>
    <string name="selected_time_range">Time Range</string>
    <string name="add_event">Add event</string>
    <string name="eearned_points">Eearned points:</string>
    <string name="current_rank">Current rank:</string>
</resources>