<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single" >
        <item
            android:title="@string/navigation">

            <menu>
                <item
                    android:id="@+id/nav_dashboard"
                    android:title="@string/dashboard"
                    android:icon="@drawable/baseline_space_dashboard_24" />
                <item
                    android:id="@+id/nav_stats"
                    android:title="@string/stats"
                    android:icon="@drawable/baseline_query_stats_24" />
                <item
                    android:id="@+id/nav_challenges"
                    android:title="@string/challenges"
                    android:icon="@drawable/challenges" />
                <item
                    android:id="@+id/nav_friends"
                    android:title="@string/friends"
                    android:icon="@drawable/baseline_people_24" />
            </menu>
        </item>
    </group>

    <group android:checkableBehavior="single">
        <item
            android:title="@string/settings">

            <menu>
                <item
                    android:id="@+id/nav_notifications"
                    android:title="@string/notifications"
                    android:icon="@drawable/baseline_notifications_24"/>
                <item
                    android:id="@+id/nav_profile"
                    android:title="@string/profile"
                    android:icon="@drawable/baseline_info_24"/>
                <item
                    android:id="@+id/nav_about"
                    android:title="@string/about"
                    android:icon="@drawable/baseline_question_mark_24"/>
            </menu>
        </item>
    </group>

</menu>